--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,10 @@ owner: jany006 # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
   - name: LittleLink
     url: https://cervenak.online
+  - name: NAS
+    url: $NAS
 
 
 status-website:
